--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,9 @@ project(lrn)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_library(lrn library.cpp)
+add_library(lrn src/lrn)
+set_target_properties(lrn PROPERTIES LINKER_LANGUAGE CXX)
+
+target_include_directories(lrn PUBLIC src/)
+
+add_subdirectory(src)
